--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -3,10 +3,11 @@
     grid-template-columns: 1fr 1fr 1fr;
     width:100%;
     margin-bottom: 10%;
+     background-color: var(--black)
 }
 .my_profile_images_img{
-    width: 100%;
     height: 150px;
+   
 }
 .my_profile_info{
     display: grid;
@@ -35,6 +36,7 @@
     line-height: 0.3;
 }
 .my_profile_pic{
+    background-color: white;
     border: solid 1px black;
     box-shadow:  5px 5px black;
     height:80px;
